--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
     <![endif]-->
   </head>
 
-  <body>
+  <body class="contact">
     <!-- <div class="overlay"></div> -->
 
     <div class="site-wrapper">
@@ -38,19 +38,50 @@
               <h3 class="masthead-brand">Litwin Law Firm</h3>
               <nav>
                 <ul class="nav masthead-nav">
-                  <li class="active"><a href="">Home</a></li>
-                  <li><a href="contact.html">Contact</a></li>
+                  <li><a href="index.html">Home</a></li>
+                  <li class="active"><a href="">Contact</a></li>
                 </ul>
               </nav>
             </div>
           </div>
 
           <div class="inner cover">
-            <h1 class="cover-heading">Bankruptcy, Finance, Business.</h1>
-            <p class="lead">Worry about your business, we'll take care of the rest.</p>
-            <p class="lead">
-              <a href="contact.html" class="btn btn-lg btn-default">Learn more</a>
-            </p>
+            <h1 class="cover-heading">Let's get in touch</h1>
+<!--             <div class="row">
+              <div class="col-md-12"> -->
+                <form class="form-horizontal contact-form">
+                  <div class="form-group">
+                    <label for="firstName" class="col-sm-2 control-label">First Name</label>
+                    <div class="col-sm-10">
+                      <input type="text" class="form-control" id="firstName" placeholder="First Name">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label for="lastName" class="col-sm-2 control-label">Last Name</label>
+                    <div class="col-sm-10">
+                      <input type="text" class="form-control" id="lastName" placeholder="Last Name">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label for="email" class="col-sm-2 control-label">Email</label>
+                    <div class="col-sm-10">
+                      <input type="email" class="form-control" id="email" placeholder="Email">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label for="tel" class="col-sm-2 control-label">Telephone</label>
+                    <div class="col-sm-10">
+                      <input type="tel" class="form-control" id="tel" placeholder="Telephone">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <div class="col-sm-offset-9 col-sm-3">
+                      <button type="submit" class="btn btn-lg btn-block btn-default">Submit</button>
+                    </div>
+                  </div>
+                </form>
+<!--               </div>
+            </div> -->
           </div>
 
           <div class="mastfoot">
