--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,6 @@
   </head>
 
   <body class="contact">
-    <!-- <div class="overlay"></div> -->
 
     <div class="site-wrapper">
 
@@ -49,29 +48,34 @@
             <h1 class="cover-heading">Let's get in touch</h1>
 <!--             <div class="row">
               <div class="col-md-12"> -->
-                <form class="form-horizontal contact-form">
-                  <div class="form-group">
+              <iframe src="https://awesomeforms.com/forms/sDkjAns?iframe=true" allowtransparency="true" frameborder="0" width="100%" height="640"></iframe>
+                <form class="form-horizontal contact-form"
+                  action="mailto:jordan@litwinlawfirm.com"
+                  method="post"
+                  enctype="text/plain">
+
+<!--                   <div class="form-group">
                     <label for="firstName" class="col-sm-2 control-label">First Name</label>
                     <div class="col-sm-10">
-                      <input type="text" class="form-control" id="firstName" placeholder="First Name">
+                      <input type="text" name="firstName" class="form-control" id="firstName" placeholder="First Name">
                     </div>
                   </div>
                   <div class="form-group">
                     <label for="lastName" class="col-sm-2 control-label">Last Name</label>
                     <div class="col-sm-10">
-                      <input type="text" class="form-control" id="lastName" placeholder="Last Name">
+                      <input type="text" name="lastName" class="form-control" id="lastName" placeholder="Last Name">
                     </div>
                   </div>
                   <div class="form-group">
                     <label for="email" class="col-sm-2 control-label">Email</label>
                     <div class="col-sm-10">
-                      <input type="email" class="form-control" id="email" placeholder="Email">
+                      <input type="email" name="email" class="form-control" id="email" placeholder="Email">
                     </div>
                   </div>
                   <div class="form-group">
                     <label for="tel" class="col-sm-2 control-label">Telephone</label>
                     <div class="col-sm-10">
-                      <input type="tel" class="form-control" id="tel" placeholder="Telephone">
+                      <input type="tel" name="phone" class="form-control" id="tel" placeholder="Telephone">
                     </div>
                   </div>
                   <div class="form-group">
@@ -79,14 +83,9 @@
                       <button type="submit" class="btn btn-lg btn-block btn-default">Submit</button>
                     </div>
                   </div>
-                </form>
+                </form> -->
 <!--               </div>
             </div> -->
-          </div>
-
-          <div class="mastfoot">
-            <div class="inner">
-            </div>
           </div>
 
         </div>
