--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
           <div class="inner cover">
             <h1 class="cover-heading">Bankruptcy, Finance, Business.</h1>
-            <p class="lead">Worry about your business, we'll take care of the rest.</p>
+            <p class="lead">A new model for seamless and sophisticated legal services.</p>
             <p class="lead">
               <a href="contact.html" class="btn btn-lg btn-default">Learn more</a>
             </p>
