--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
               <h3 class="masthead-brand">Litwin Law Firm</h3>
               <nav>
                 <ul class="nav masthead-nav">
-                  <li><a href="index.html">Home</a></li>
+                  <li><a href="/">Home</a></li>
                   <li class="active"><a href="">Contact</a></li>
                 </ul>
               </nav>
@@ -46,46 +46,7 @@
 
           <div class="inner cover">
             <h1 class="cover-heading">Let's get in touch</h1>
-<!--             <div class="row">
-              <div class="col-md-12"> -->
-              <iframe src="https://awesomeforms.com/forms/sDkjAns?iframe=true" allowtransparency="true" frameborder="0" width="100%" height="640"></iframe>
-                <form class="form-horizontal contact-form"
-                  action="mailto:jordan@litwinlawfirm.com"
-                  method="post"
-                  enctype="text/plain">
-
-<!--                   <div class="form-group">
-                    <label for="firstName" class="col-sm-2 control-label">First Name</label>
-                    <div class="col-sm-10">
-                      <input type="text" name="firstName" class="form-control" id="firstName" placeholder="First Name">
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <label for="lastName" class="col-sm-2 control-label">Last Name</label>
-                    <div class="col-sm-10">
-                      <input type="text" name="lastName" class="form-control" id="lastName" placeholder="Last Name">
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <label for="email" class="col-sm-2 control-label">Email</label>
-                    <div class="col-sm-10">
-                      <input type="email" name="email" class="form-control" id="email" placeholder="Email">
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <label for="tel" class="col-sm-2 control-label">Telephone</label>
-                    <div class="col-sm-10">
-                      <input type="tel" name="phone" class="form-control" id="tel" placeholder="Telephone">
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <div class="col-sm-offset-9 col-sm-3">
-                      <button type="submit" class="btn btn-lg btn-block btn-default">Submit</button>
-                    </div>
-                  </div>
-                </form> -->
-<!--               </div>
-            </div> -->
+            <iframe src="https://awesomeforms.com/forms/sDkjAns?iframe=true" allowtransparency="true" frameborder="0" width="100%" height="640"></iframe>
           </div>
 
         </div>
