--- a/submit.html
+++ b/submit.html
@@ -37,8 +37,8 @@
               <h3 class="masthead-brand">Litwin Law Firm</h3>
               <nav>
                 <ul class="nav masthead-nav">
-                  <li><a href="index.html">Home</a></li>
-                  <li class="active"><a href="">Contact</a></li>
+                  <li><a href="/">Home</a></li>
+                  <li><a href="contact.html">Contact</a></li>
                 </ul>
               </nav>
             </div>
