--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           </div>
 
           <div class="inner cover">
-            <h1 class="cover-heading">Finance, Business, Bankruptcy.</h1>
+            <h1 class="cover-heading">Business. Law.</h1>
             <p class="lead">A new model for seamless and sophisticated legal services.</p>
             <p class="lead">
               <a href="contact.html" class="btn btn-lg btn-default">Learn more</a>
