update firm name

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Litwin Law Firm can handle all of your business needs.">
     <meta name="author" content="LitwinLaFirm">
 
-    <title>Litwin Law Firm</title>
+    <title>Litwin Law, LLC</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -34,7 +34,7 @@
 
           <div class="masthead clearfix">
             <div class="inner">
-              <h3 class="masthead-brand">Litwin Law Firm</h3>
+              <h3 class="masthead-brand">Litwin Law, LLC</h3>
               <nav>
                 <ul class="nav masthead-nav">
                   <li class="active"><a href="">Home</a></li>
